# libwebcam

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  README.md  jpeg_transform.cxx  jpeg_transform.h  log.cxx  log.h  main.cxx  webcam_v4l2.cxx  webcam_v4l2.h
include/: log.h  string_util.hpp  webcam_v4l2.h
src/: webcam_v4l2.cxx
test/: main_jpeg.cxx  main_yuv.cxx  main_yuv_video.cxx
